--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -15,7 +15,9 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.13.4",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@nuxtjs/tailwindcss": "^6.12.2"
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
