--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -18,6 +18,7 @@
     "@nuxt/content": "^2.13.4",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
-    "@tailwindcss/typography": "^0.5.16"
+    "@tailwindcss/typography": "^0.5.16",
+    "sitemap": "^8.0.0"
   }
 }
