--- a/finance-tracker/package.json
+++ b/finance-tracker/package.json
@@ -14,5 +14,8 @@
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxtjs/supabase": "^1.4.6"
   }
 }
